# corewar

./: .gitignore  Makefile  asm  author  byte_op.c  corewar  cust.cor  cust.s  ft_print_bits.c  name2.cor  operations.c  readme.md  test.sh  testbyteorder.c  translator.c
Assembler/: BEFORE  CMakeLists.txt  DEFDOMS  Makefile  OR42  ORCar  SYPREF_AF  SYPREF_AF3  SYPREF_AF_KEYREP  SYPREF_BE  xaa
Assembler/inc/: asm.h
Assembler/libft/: Makefile
Assembler/libft/inc/: libft.h
Assembler/libft/src/: ft_intpower.c  ft_isalnum.c  ft_isnumeric.c  ft_itoa.c  ft_lstadd.c  ft_lstclr.c  ft_lstdelone.c  ft_ltoa_base.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strequ.c  ft_striteri.c  ft_strjoin_leak.c  ft_strlen.c  ft_strnequ.c
Assembler/src/: args_checker.c  args_patterns.c  asm.c  asm_parser.c  check_opname.c  converter.c  errors.c  ft_read_until_ch.c  get_type.c  letter_check.c  memory_vldop.c  operations.c
Champion/: Harley_Quinn.cor  Harley_Quinn.s
Tests/: test.sh
Tests/vm_champs/champs/valid/: Harley_Quinn.s
Virtual Machine/: CMakeLists.txt  Makefile  corewar
Virtual Machine/corewar.dSYM/Contents/Resources/DWARF/: corewar
Virtual Machine/ft_printf/: Makefile
Virtual Machine/ft_printf/inc/: ft_printf.h  ft_rainbow.h  libft.h
Virtual Machine/ft_printf/src/: bonus_part.c  doublf.c  doublf2.c  doublf_part_2.c  doublf_part_3.c  doublf_part_4.c  doublf_part_5.c  f_cps.c  ft_atoi.c  ft_bzero.c  ft_diouxx_up.c  ft_fourth.c  ft_isdigit.c  ft_itoa.c  ft_itoa_base_size_t.c  ft_itoa_base_uintmax_t.c  ft_itoa_base_ull.c  ft_itoa_intmax_t.c  ft_itoa_ll.c  ft_itoa_ssize_t.c  ft_memalloc.c  ft_number_of_digits.c  ft_printf.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_endl.c  ft_putstr.c  ft_rainbow.c  ft_second.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strjoin.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  ft_third.c  (+8 more)
Virtual Machine/header/: op.h  virtual.h
Virtual Machine/libft/: Makefile
Virtual Machine/libft/inc/: get_next_line.h  libft.h
Virtual Machine/libft/src/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlcat.c  (+17 more)
Virtual Machine/src/: arena.c  help_func.c  help_parse.c  help_play.c  main.c  op.c  operations.c  operations_2.c  operations_3.c  operations_4.c  operations_5.c  operations_6.c  parse.c  play.c  virtual.c
asm/: .r  BAT-2  BAT_L4  Backward.s  Batman.s  F2AS  F2AS-2  FOR-2  Makefile  NA2  NA2-3  NA2-5  PRINTB  digitch.s  duplabel.cor  duplabel.s  lastlab.s  llnlra.s  llnonl.s  name2.cor  nolabel.s  test  xt  xt1
asm/cham/: .ex.s.swp  Car.s
asm/inc/: asm.h  op.h
asm/libft/: Makefile
asm/libft/src/: ft_atoi.c  ft_bzero.c  ft_countch.c  ft_iswhitespace.c  ft_itoa_base.c  ft_lstdel.c  ft_lstmap.c  ft_putendl.c  ft_putstr_until.c  ft_realloc.c  ft_str_white_trim.c  ft_striter.c  ft_strncat.c  ft_swap.c  ft_tolower.c  get_next_line.c
asm/src/: args_checker.c  asm.c  asm_parser.c  byte_op.c  check_name.c  check_opname.c  converter.c  errors.c  fill_hero.c  ft_read_until_ch.c  get_type.c  is_labelinst.c  memory_hero.c  memory_op.c  operations.c  parse_inst.c  read_arguments.c  translator.c
asm/test.dSYM/Contents/Resources/DWARF/: test
asm/vm_champs/champs/: leeloo.s  mat.s
asm/vmch/champs/: ex.s
asm/vmch/champs/examples/: fluttershy.s
corewar.dSYM/Contents/Resources/DWARF/: corewar
inc/: op.h
libft/: Makefile
libft/ft_printf/src/: bin_transform.c  dbl_to_str.c  float_dec.c  float_div.c  float_help.c  float_round.c  float_sign.c  float_str.c  float_sum.c  float_width.c  ft_print_float.c  ft_printf.c  ft_str_op.c  helper.c  kostyl.c  parser.c  print_char.c  print_dec.c  print_double.c  print_hex.c  print_num.c  print_octal.c  print_pointer.c  print_string.c  print_unsigned.c  str_adding.c
libft/inc/: ft_printf.h  libft.h
libft/src/: ft_abs.c  ft_chjoinstr.c  ft_countch.c  ft_doublematrixdel.c  ft_doublestrdel.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa_ubase.c  ft_lstiter.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nchjoinstr.c  ft_putnbr.c  ft_putstr.c  ft_str_white_trim.c  ft_stradd.c  ft_strcat.c  ft_strchr_safe.c  ft_strclr.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strdup_safe.c  ft_strjoin.c  ft_strjoinch.c  ft_strjoinchar.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strnchr.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  (+11 more)
vldlib/: B.s  Batman.cor  Batman.s  Makefile  asm_checker.c  asm_checker2.c  asm_parser.c  check_name.c  file  ft_read_until_ch.c  main.c  name2.cor  test  vldlib.h
vldlib/inc/: asm.h  vldlib.h
vldlib/src/: args_checker.c  args_patterns.c  asm.c  asm_checker2.c  asm_parser.c  byte_op.c  check_name.c  check_opname.c  converter.c  errors.c  fill_hero.c  ft_read_until_ch.c  get_type.c  is_labelinst.c  letter_check.c  memory_hero.c  memory_op.c  memory_vldop.c  parse_inst.c  read_arguments.c  translator.c
vm_champs/champs/: Car.s  ex.s  lde.s
vm_champs/corewar.dSYM/Contents/Resources/DWARF/: corewar
