cmake_minimum_required(VERSION 3.16)
project(Assembler C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft/inc)

add_executable(Assembler
        inc/asm.h
        inc/op.h
        libft/inc/libft.h
        libft/src/ft_abs.c
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_chjoinstr.c
        libft/src/ft_copyuntil.c
        libft/src/ft_countch.c
        libft/src/ft_doublematrixdel.c
        libft/src/ft_doublestrdel.c
        libft/src/ft_intpower.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isnumeric.c
        libft/src/ft_isprint.c
        libft/src/ft_iswhitespace.c
        libft/src/ft_itoa.c
        libft/src/ft_itoa_base.c
        libft/src/ft_itoa_ubase.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstclr.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_lstsize.c
        libft/src/ft_ltoa_base.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_nchjoinstr.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_putstr_until.c
        libft/src/ft_realloc.c
        libft/src/ft_str_white_trim.c
        libft/src/ft_stradd.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strchr_safe.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strdup_safe.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strjoin_leak.c
        libft/src/ft_strjoinch.c
        libft/src/ft_strjoinchar.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strnchr.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnewncp.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strshift.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_strtrimchr.c
        libft/src/ft_swap.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_wordcount.c
        libft/src/get_next_line.c
        src/args_checker.c
        src/args_patterns.c
        src/asm.c
        src/asm_parser.c
        src/byte_op.c
        src/check_name.c
        src/check_opname.c
        src/converter.c
        src/errors.c
        src/ft_read_until_ch.c
        src/get_type.c
        src/is_labelinst.c
        src/letter_check.c
        src/memory_hero.c
        src/memory_op.c
        src/memory_vldop.c
        src/operations.c
        src/parse_inst.c
        src/read_arguments.c
        src/translator.c)
